--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,13 +56,14 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-util:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.0'
     implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.2.2'
     testImplementation 'junit:junit:4.12'
@@ -76,7 +77,7 @@ dependencies {
 
 
     // Compose dependencies
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$compose_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
 
@@ -88,7 +89,7 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
 
     // Paging 3.0
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha15'
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -122,12 +123,15 @@ dependencies {
 
     //kotlin Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$ktx_coroutine_version"
 
     // android ktx
-    implementation 'androidx.activity:activity-ktx:1.5.0'
+    implementation 'androidx.activity:activity-ktx:1.5.1'
+
+    //Kotlin state
+
 
     //hilt viewmodel
     // implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
@@ -137,7 +141,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
 
     //navigation
-    implementation("androidx.navigation:navigation-compose:2.5.0")
+    implementation("androidx.navigation:navigation-compose:2.5.1")
     implementation "com.google.accompanist:accompanist-navigation-animation:0.16.0"
 
     // Coil Image Dependency
@@ -145,9 +149,9 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.1.0")
 
     //LiveData
-    implementation("androidx.compose.runtime:runtime:1.3.0-alpha01")
-    implementation("androidx.compose.runtime:runtime-livedata:1.3.0-alpha01")
-    implementation("androidx.compose.runtime:runtime-rxjava2:1.3.0-alpha01")
+    implementation("androidx.compose.runtime:runtime:1.3.0-alpha03")
+    implementation("androidx.compose.runtime:runtime-livedata:1.3.0-alpha03")
+    implementation("androidx.compose.runtime:runtime-rxjava2:1.3.0-alpha03")
 
     //Gson
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -177,6 +181,7 @@ dependencies {
     //Jetpack Compose Permissions
     implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
     implementation "com.google.accompanist:accompanist-permissions:0.26.1-alpha"
+
 
     // Local unit tests
     testImplementation "androidx.test:core:1.4.0"
