--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,11 @@
     package="com.example.jetpackcomposepractice">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--    For Permission Activity-->
-    <!--    <uses-permission android:name="android.permission.CAMERA" />-->
-    <!--    <uses-permission android:name="android.permission.RECORD_AUDIO" />-->
-    <!--    <uses-permission android:name="android.permission.READ_CONTACTS" />-->
-    <!--    <uses-permission android:name="android.permission.WRITE_CONTACTS" />-->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- For Permission Activity -->
+    <!-- <uses-permission android:name="android.permission.CAMERA" /> -->
+    <!-- <uses-permission android:name="android.permission.RECORD_AUDIO" /> -->
+    <!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
+    <!-- <uses-permission android:name="android.permission.WRITE_CONTACTS" /> -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -25,6 +23,15 @@
         android:theme="@style/Theme.CustomSplashScreenTheme"
         tools:targetApi="31">
         <activity
+            android:name=".notification.localNotification.NotificationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_notification"
+            android:theme="@style/Theme.CustomSplashScreenTheme">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".permissionAndConnectivityCheck.PermissionActivity"
             android:exported="false"
             android:label="@string/title_activity_permission"
@@ -33,7 +40,7 @@
             android:name=".onboardingCompose.BoardingWithSplashScreen"
             android:exported="false"
             android:label="@string/title_activity_boarding_with_splash_screen"
-            android:theme="@style/Theme.CustomSplashScreenTheme"></activity>
+            android:theme="@style/Theme.CustomSplashScreenTheme" />
         <activity
             android:name=".paging3.Paging3Activity"
             android:exported="false"
