--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ android {
 }
 
 dependencies {
+    // Import the Compose BOM
+    implementation platform('androidx.compose:compose-bom:2022.10.00')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
@@ -66,6 +69,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.0'
     implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.2.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.12'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
