--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,15 @@
         android:theme="@style/Theme.CustomSplashScreenTheme"
         tools:targetApi="31">
         <activity
+            android:name=".jetpackPagination.PaginationActivtiy"
+            android:exported="false"
+            android:label="@string/title_activity_pagination_activtiy"
+            android:theme="@style/Theme.CustomSplashScreenTheme">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".notification.localNotification.NotificationActivity"
             android:exported="false"
             android:label="@string/title_activity_notification"
