--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,19 @@
 plugins {
+//    id 'com.android.application'
+//    id 'kotlin-android'
+//    id 'kotlin-kapt'
+//    id 'dagger.hilt.android.plugin'
+//    id 'kotlinx-serialization'
+
     id 'com.android.application'
-    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    id 'kotlinx-serialization'
+    id "org.jlleitschuh.gradle.ktlint" version "10.3.0"
+//    id 'com.google.gms.google-services'
+    id 'kotlin-parcelize'
+    //id 'com.google.devtools.ksp' version '1.6.10-1.0.2'
+    id 'com.google.devtools.ksp' version '1.7.20-1.0.6'
 }
 
 android {
@@ -45,7 +55,8 @@ android {
         viewBinding = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion = compose_compiler_version
+        //Compose Compiler Version "1.3.2"
     }
     packagingOptions {
         resources {
@@ -55,40 +66,52 @@ android {
 }
 
 dependencies {
+
+    //Updated 2022/11/26
+    //現在の Compose Version　1.3.0
+    //現在の Compose Compiler Version 1.3.2
+    //現在の	Compatible Kotlin Version 1.5.31
+
     // Import the Compose BOM
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
+    def composeBOM_version = "2022.10.00"
+    def composeBOM = platform("androidx.compose:compose-bom:$composeBOM_version")
+    implementation composeBOM
+    testImplementation composeBOM
+    androidTestImplementation composeBOM
+    debugImplementation composeBOM
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-util:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-util"
+    implementation "androidx.compose.material:material"
+    implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.0'
     implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.2.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.12'
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling"
 
     //material 3
-    implementation "androidx.compose.material3:material3:$material3_version"
+    implementation "androidx.compose.material3:material3"
 
     //Materials Icons
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended"
 
 
     // Compose dependencies
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
 
     //Room
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-paging:$room_version"
 
@@ -221,7 +244,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
     testImplementation "com.google.truth:truth:1.1.3"
 
 
