--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,4 @@
 plugins {
-//    id 'com.android.application'
-//    id 'kotlin-android'
-//    id 'kotlin-kapt'
-//    id 'dagger.hilt.android.plugin'
-//    id 'kotlinx-serialization'
-
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
@@ -70,7 +64,7 @@ dependencies {
     //Updated 2022/11/26
     //現在の Compose Version　1.3.0
     //現在の Compose Compiler Version 1.3.2
-    //現在の	Compatible Kotlin Version 1.5.31
+    //現在の	Compatible Kotlin Version 1.7.20
 
     // Import the Compose BOM
     def composeBOM_version = "2022.10.00"
@@ -82,18 +76,17 @@ dependencies {
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha01'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-util"
     implementation "androidx.compose.material:material"
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.0'
-    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.2.2'
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.12'
     debugImplementation "androidx.compose.ui:ui-tooling"
 
     //material 3
@@ -116,7 +109,7 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
 
     // Paging 3.0
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha17'
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -137,7 +130,7 @@ dependencies {
 
     //Ok Http
     implementation "com.squareup.okhttp3:okhttp:4.9.3"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
     //dagger hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -146,29 +139,26 @@ dependencies {
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
 
-    kapt("org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.3.0")
+    kapt("org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0")
 
     //kotlin Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$ktx_coroutine_version"
 
     // android ktx
-    implementation 'androidx.activity:activity-ktx:1.5.1'
-
-    //Kotlin state
-
+    implementation 'androidx.activity:activity-ktx:1.6.1'
 
     //hilt viewmodel
-    // implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    //implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
 
     //pager
     implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
     implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
 
     //navigation
-    implementation("androidx.navigation:navigation-compose:2.5.1")
+    implementation("androidx.navigation:navigation-compose:2.5.3")
     implementation "com.google.accompanist:accompanist-navigation-animation:0.16.0"
 
     // Coil Image Dependency
@@ -176,9 +166,9 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.1.0")
 
     //LiveData
-    implementation("androidx.compose.runtime:runtime:1.3.0-alpha03")
-    implementation("androidx.compose.runtime:runtime-livedata:1.3.0-alpha03")
-    implementation("androidx.compose.runtime:runtime-rxjava2:1.3.0-alpha03")
+    implementation("androidx.compose.runtime:runtime:1.4.0-alpha02")
+    implementation("androidx.compose.runtime:runtime-livedata:1.4.0-alpha02")
+    implementation("androidx.compose.runtime:runtime-rxjava2:1.4.0-alpha02")
 
     //Gson
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -186,8 +176,8 @@ dependencies {
     // Accompanist (Jetpack Compose Flow Layouts)
     implementation "com.google.accompanist:accompanist-flowlayout:0.15.0"
     // Accompanist (Jetpack Compose Pager, indicator)
-    implementation "com.google.accompanist:accompanist-pager:0.24.6-alpha"
-    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.6-alpha"
+    implementation "com.google.accompanist:accompanist-pager:0.26.1-alpha"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
 
     // Accompanist (System UI Controller)
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
@@ -207,45 +197,39 @@ dependencies {
 
     //Jetpack Compose Permissions
     implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-permissions:0.26.1-alpha"
+    implementation "com.google.accompanist:accompanist-permissions:0.27.0"
 
     implementation "androidx.savedstate:savedstate-ktx:1.1.0"
 
     // Local unit tests
-    testImplementation "androidx.test:core:1.4.0"
-    testImplementation "junit:junit:4.13.2"
+    testImplementation "androidx.test:core:1.5.0"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$ktx_coroutine_version"
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
     testImplementation "io.mockk:mockk:1.10.5"
     // Mockk
-    androidTestImplementation "io.mockk:mockk-android:1.10.5"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0-alpha01"
+    androidTestImplementation "io.mockk:mockk-android:1.12.0"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.0-alpha02"
 
     // Instrumentation tests
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.41'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.44'
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
-    androidTestImplementation "junit:junit:4.13.2"
+    androidTestImplementation "junit:junit"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$ktx_coroutine_version"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     //Truth Dependency
     androidTestImplementation "com.google.truth:truth:1.1.3"
     testImplementation "com.google.truth:truth:1.1.3"
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
+    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
-    androidTestImplementation "io.mockk:mockk-android:1.10.5"
-    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:runner:1.5.1'
     androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.28.3'
 
     //Testing Dependency
-    testImplementation 'junit:junit:'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'junit:junit'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4"
     testImplementation "com.google.truth:truth:1.1.3"
-
-
 }
