--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,10 +95,11 @@
             android:exported="false"
             android:label="@string/title_activity_nav_graph"
             android:theme="@style/Theme.JetPackComposePractice" />
+
+      <!--  android:screenOrientation="landscape"-->
         <activity
             android:name=".nestedNavigation.NestedNavigation"
             android:exported="false"
-            android:screenOrientation="landscape"
             android:label="@string/title_activity_nested_navigation"
             android:theme="@style/Theme.JetPackComposePractice" />
         <activity
